# howtf

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE.md  README.md  ROADMAP.md  astro.config.mjs  content  impact-log.md  package-lock.json  package.json  quartz.config.ts  quartz.layout.ts
.github/workflows/: deploy.yaml
content/: index.md
content/blog/: ELF-Linking-101.md  index.md
demo/elf-linking/: Makefile  capture.sh  got_watch.c  main.c  math.c  regenerate.sh
demo/rdma-symbol-collision/: README.md
docs/plugins/: CustomOgImages.md
public/: robots.txt
src/: content.config.ts
src/lib/: site.ts
tools/symsplit/: .dockerignore  .gitignore  Dockerfile  Makefile  NOTES-system-sweep.md  README.md  pyproject.toml  sweep.py
tools/symsplit/symsplit/: __init__.py  allowlist.py  analyze.py  cli.py  closure.py  cluster.py  elffacts.py  model.py  report.py
tools/symsplit/symsplit/data/: allowlist.txt
tools/symsplit/tests/: conftest.py  test_allowlist.py  test_benign.py  test_ground_truth.py  test_scope_partition.py
tools/symsplit/tests/fixtures/benign/: build.sh
tools/symsplit/tests/fixtures/benign/src/: alloc.c  alloc_static.c  consumer_api.c  consumer_hook.c  consumer_malloc.c  helper_exe.c  hidden_provider.c  secret_exe.c  secret_provider.c  strong.c  v1.map  v2.map  verv.c  weak.c
tools/symsplit/tests/fixtures/scope-partition/: build.sh
tools/symsplit/tests/fixtures/scope-partition/src/: workshim.c
tools/symsplit/tests/fixtures/split-state/: build.sh
tools/symsplit/tests/fixtures/split-state/src/: app.c  collective.c  hide-dso.map  verbs.c  verbs.h
(+256 files in other folders)
