[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "symsplit"
version = "0.1.0"
description = "Split-state linking diagnostic: a binding simulator that flags when two live copies of one strong symbol resolve to DIFFERENT definitions across the static/dynamic boundary."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "symsplit authors" }]
dependencies = [
  "pyelftools==0.31",
]

[project.optional-dependencies]
test = ["pytest==8.3.4"]

[project.scripts]
symsplit = "symsplit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["symsplit*"]

[tool.setuptools.package-data]
symsplit = ["data/*.txt"]
